@@ -24,6 +24,8 @@ Attachments are now processed in the order they were attached.
 == CHANGELOG ==
 = 1.5.21 (future) =
 * Fixed spelling errors
+* Added more debugging around image sizes
+* Clarified some image options on settings page
 
 = 1.5.20 (2014.05.29) =
 * Added logic to prevent appending images when preferred text type is HTML.
